--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title></title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton-framework/1.1.1/skeleton.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link rel="stylesheet" href="css/CSS.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -57,7 +57,7 @@
 	</div>
     
   </div>
-<script src="javaScript/javaScript.js" charset="utf-8"></script>
+<script src="./javaScript.js" charset="utf-8"></script>
 </body>
 
 </html>
