--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title></title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton-framework/1.1.1/skeleton.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-	<link rel="stylesheet" href="./style.css">
+	<link rel="stylesheet" href="TextBill.style.css/style.css">
 </head>
 
 <body>
